fix build after Guice integration (#3)
* fix build after Guice integration

* use singleton for variables